www/css/index.css
/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    background-color:#E4E4E4;
    background-attachment:fixed;
    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
    font-size:12px;
    height:100%;
    margin:0px;
    padding:0px;
    width:100%;
}



.wrapper {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}
.background {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: url('../img/bg-top.png');
	background-color: #72defe;
	background-repeat: no-repeat;
	background-size: 100% auto;
}
.foreground {
	position: absolute;
	top: 59%;
	right: 0;
	bottom: 0;
	left: 0;
	background: url('../img/bg-bottom.png');
	background-color: #41c8e8;
	background-repeat: repeat-x;
	background-position: left top;
	z-index: 100;
}
.foreground-top {
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	padding-top: 100px;
	margin-top: -100px;
	background: url('../img/foreground-top.png');
	background-repeat: repeat-x;
	background-position: left bottom;
	z-index: 100;
}
.sprite {
	position: absolute;
	bottom: 36%;
	left: 10%;
	display: inline-block;
	z-index: 150;
	width: 90px;
	
	-webkit-transition-duration: 1s;
    -moz-transition-duration: 1s;
    -o-transition-duration: 1s;
    transition-duration: 1s;
    -webkit-transition-property: -webkit-transform;
    -moz-transition-property: -moz-transform;
    -o-transition-property: -o-transform;
    transition-property: transform;
}
.sprite img {
	max-width: 100%;
}
.tube {
	position: absolute;
	bottom: 37%;
	right: -100px;
	display: inline-block;
	z-index: 150;
	width: 40px;
}
.tube img {
	max-width: 100%;
}
#stage {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 2000;
}

.floating {
	-webkit-animation-name: float;
	-webkit-animation-duration: 1.5s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-direction: normal;
	-webkit-animation-timing-function: ease-out;
	-webkit-animation-fill-mode: forwards;
	-webkit-animation-delay: 0.5s;
	-moz-animation-name: float;
	-moz-animation-duration: 1.5s;
	-moz-animation-iteration-count: infinite;
	-moz-animation-direction: normal;
	-moz-animation-timing-function: ease-out;
	-moz-animation-fill-mode: forwards;
	-moz-animation-delay: 0.5s;
	-o-animation-name: float;
	-o-animation-duration: 1.5s;
	-o-animation-iteration-count: infinite;
	-o-animation-direction: normal;
	-o-animation-timing-function: ease-out;
	-o-animation-fill-mode: forwards;
	-o-animation-delay: 0.5s;
	animation-name: float;
	animation-duration: 1.5s;
	animation-iteration-count: infinite;
	animation-direction: normal;
	animation-timing-function: ease-out;
	animation-fill-mode: forwards;
	animation-delay: 0.5s;
}
@-webkit-keyframes float {
	0%    { padding-bottom: 0px; }
	50%   { padding-bottom: 5px; }
	100%  { padding-bottom: 0px; }
}
@-moz-keyframes float {
	0%    { padding-bottom: 0px; }
	50%   { padding-bottom: 5px; }
	100%  { padding-bottom: 0px; }
}
@-o-keyframes float {
	0%    { padding-bottom: 0px; }
	50%   { padding-bottom: 5px; }
	100%  { padding-bottom: 0px; }
}
@keyframes float {
	0%    { padding-bottom: 0px; }
	50%   { padding-bottom: 5px; }
	100%  { padding-bottom: 0px; }
}

.flowing {
	-webkit-animation-name: flow;
	-webkit-animation-duration: 4.5s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-direction: normal;
	-webkit-animation-timing-function: linear;
	-webkit-animation-fill-mode: forwards;
	-webkit-animation-delay: 0s;
	-moz-animation-name: flow;
	-moz-animation-duration: 4.5s;
	-moz-animation-iteration-count: infinite;
	-moz-animation-direction: normal;
	-moz-animation-timing-function: linear;
	-moz-animation-fill-mode: forwards;
	-moz-animation-delay: 0s;
	-o-animation-name: flow;
	-o-animation-duration: 4.5s;
	-o-animation-iteration-count: infinite;
	-o-animation-direction: normal;
	-o-animation-timing-function: linear;
	-o-animation-fill-mode: forwards;
	-o-animation-delay: 0s;
	animation-name: flow;
	animation-duration: 4.5s;
	animation-iteration-count: infinite;
	animation-direction: normal;
	animation-timing-function: linear;
	animation-fill-mode: forwards;
	animation-delay: 0s;
}
@-webkit-keyframes flow {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -1500px; }
}
@-moz-keyframes flow {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -1500px; }
}
@-o-keyframes flow {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -1500px; }
}
@keyframes flow {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -1500px; }
}

.panning {
	-webkit-animation-name: pan;
	-webkit-animation-duration: 24s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-direction: normal;
	-webkit-animation-timing-function: linear;
	-webkit-animation-fill-mode: forwards;
	-webkit-animation-delay: 0s;
	-moz-animation-name: pan;
	-moz-animation-duration: 24s;
	-moz-animation-iteration-count: infinite;
	-moz-animation-direction: normal;
	-moz-animation-timing-function: linear;
	-moz-animation-fill-mode: forwards;
	-moz-animation-delay: 0s;
	-o-animation-name: pan;
	-o-animation-duration: 24s;
	-o-animation-iteration-count: infinite;
	-o-animation-direction: normal;
	-o-animation-timing-function: linear;
	-o-animation-fill-mode: forwards;
	-o-animation-delay: 0s;
	animation-name: pan;
	animation-duration: 24s;
	animation-iteration-count: infinite;
	animation-direction: normal;
	animation-timing-function: linear;
	animation-fill-mode: forwards;
	animation-delay: 0s;
}
@-webkit-keyframes pan {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -750px; }
}
@-moz-keyframes pan {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -750px; }
}
@-o-keyframes pan {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -750px; }
}
@keyframes pan {
	0%    { background-position-x: 0px; }
	100%  { background-position-x: -750px; }
}

